--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
                   <article id="portfolio">
                     <header>
                       <h2>Portfolio</h2>
-                      <p>Aqui tienes mis últimos trabajos.</p>
+                      <p>Aquí tienes mis últimos trabajos.</p>
                     </header>
                     <div class="container">
                       <div class="row">
