--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 								<section class="box style1">
 									<span class="fab fa-github fa-5x"></span>
 									<p></p>
-									<h3><a href="https://github.com/Nerea-Cassian" target="_blank">Mi página de GitHub</a></h3>
+									<h3><a href="https://github.com/NereaCassian" target="_blank">Mi página de GitHub</a></h3>
 									<p>Aquí puedes encontrar algunos de mis proyectos relacionados con programación.</p>
 								</section>
 							</div>
