Fixing broken link

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,30 +34,30 @@
                <div class="wrapper style3">
                   <article id="portfolio">
                     <header>
-                      <h2>Portfolio</h2>
+                      <h2>Porfolio</h2>
                       <p>Aquí tienes mis últimos trabajos.</p>
                     </header>
                     <div class="container">
                       <div class="row">
                         <div class="4u">
                           <article class="box style2">
-                            <a href="https://github.com/Nerea-Cassian/Judy_Alvarez_Bot" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-                            <h3><a href="https://github.com/Nerea-Cassian/Judy_Alvarez_Bot">Judy Álvarez</a></h3>
+                            <a href="https://github.com/NereaCassian/Judy_Alvarez_Bot" target="_blank" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+                            <h3><a href="https://github.com/NereaCassian/Judy_Alvarez_Bot" target="_blank">Judy Álvarez</a></h3>
                             <p>Un bot de discord en js para usar actividades integradas de discord</p>
                             <p></p>
                           </article>
                         </div>
                         <div class="4u">
                           <article class="box style2">
-                            <a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-                            <h3><a href="#">Deep_HackerJob</a></h3>
+                            <a href="https://github.com/NereaCassian/deep_hackerjob" target="_blank" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+                            <h3><a href="https://github.com/NereaCassian/deep_hackerjob" target="_blank">Deep_HackerJob</a></h3>
                             <p>Un script en LUA que incorpora el trabajo de hacker en servidores de FiveM</p>
                           </article>
                         </div>
                         <div class="4u">
                           <article class="box style2">
-                            <a href="https://imgur.com/ngwUPED" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-                            <h3><a href="https://imgur.com/ngwUPED">Casca Chibbi</a></h3>
+                            <a href="https://imgur.com/ngwUPED" target="_blank" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+                            <h3><a href="https://imgur.com/ngwUPED" target="_blank">Casca Chibbi</a></h3>
                             <p>Un pequeño souvenir de Casca, la co-protagonista de Berserk</p>
                             <p></p>
                           </article>
@@ -66,23 +66,23 @@
                       <div class="row">
                         <div class="4u">
                           <article class="box style2">
-                            <a href="https://github.com/Nerea-Cassian/RatBot" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-                            <h3><a href="https://github.com/Nerea-Cassian/RatBot">RatBot</a></h3>
+                            <a href="https://github.com/NereaCassian/RatBot" target="_blank" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+                            <h3><a href="https://github.com/NereaCassian/RatBot" target="_blank">RatBot</a></h3>
                             <p>Un bot que repostea contenido de distintos subreddits a una cuenta de Twitter a través de las API de ambas redes sociales.</p>
                           </article>
                         </div>
                         <div class="4u">
                           <article class="box style2">
-                            <a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-                            <h3><a href="#">AluicordBottom</a></h3>
+                            <a href="https://github.com/NereaCassian/AliucordBottom" target="_blank" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+                            <h3><a href="https://github.com/NereaCassian/AliucordBottom" target="_blank">AluicordBottom</a></h3>
                             <p>Una extensión para la app Aluicord que permite codificar y decodificar mensajes en bottom spec.</p>
                             <p></p>
                           </article>
                         </div>
                         <div class="4u">
                           <article class="box style2">
-                            <a href="https://imgur.com/Gnhpy9B" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-                            <h3><a href="https://imgur.com/Gnhpy9B">Jake el Perro Navideño</a></h3>
+                            <a href="https://imgur.com/Gnhpy9B" target="_blank" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+                            <h3><a href="https://imgur.com/Gnhpy9B" target="_blank">Jake el Perro Navideño</a></h3>
                             <p>Una foto de perfil para un servidor de discord del co-protagonista de Hora de Aventuras </p>
                             <p></p>
                           </article>
