--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					</footer>
 					<footer>
 						<ul id="copyright">
-							<a href="http://www.apache.org/licenses/LICENSE-2.0"<li>&copy;Licensed under the Apache License, Version 2.0</li></a><li>Designed by Nerea Kalandadze</li>
+							<a href="http://www.apache.org/licenses/LICENSE-2.0"<li>&copy;Licensed under the Apache License, Version 2.0</li></a><li>Designed with ❤️ by Nerea Kalandadze</li>
 						</ul>
 					</footer>
 				</article>
