--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+		<script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
 		<script src="https://kit.fontawesome.com/0666e89db0.js" crossorigin="anonymous"></script>
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.scrolly.min.js"></script>
@@ -16,10 +17,21 @@
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-desktop.css" />
 		</noscript>
+		<style>
+			.anilist{
+
+
+
+
+
+			}
+
+		</style>
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
 	</head>
 	<body>
+
 
 		<!-- Nav -->
 			<nav id="nav">
@@ -45,7 +57,15 @@
 							<h3>She/her</h3>
 							<p>Y esta es mi <strong>Página personal</strong>. Soy una programadora junior que desde joven ha sentido pasíon por el mundo del software y hardware. También suelo hacer cositas en pixel art y jugar videojuegos.</p>
 							<p><strong>Redes Sociales</strong></p>
-							<a href="https://linkedin.com/in/nerea-kalandadze-22590b165" target="_blank"><span class="fab fa-linkedin fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/who_caresboutme" target="_blank"><span class="fab fa-twitter fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.instagram.com/nereacassian/" target="_blank"><span class="fab fa-instagram fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.reddit.com/user/Deep_in_Abyss" target="_blank"><span class="fab fa-reddit fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://t.me/deep_in_abyss" target="_blank"><span class="fab fa-telegram fa-3x"Z></span></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://discord.com/invite/VdccbVyUjc" target="_blank"><span class="fab fa-discord fa-3x"Z></span></a>
+							<article class="container">
+							  <a href="https://linkedin.com/in/nerea-kalandadze-22590b165" target="_blank"><span class="fab fa-linkedin fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
+							  <a href="https://twitter.com/who_caresboutme" target="_blank"><span class="fab fa-twitter fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
+							  <a href="https://www.instagram.com/nereacassian/" target="_blank"><span class="fab fa-instagram fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
+							  <a href="https://www.reddit.com/user/Deep_in_Abyss" target="_blank"><span class="fab fa-reddit fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
+							  <a href="https://t.me/deep_in_abyss" target="_blank"><span class="fab fa-telegram fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
+							  <a href="https://discord.com/invite/VdccbVyUjc" target="_blank"><span class="fab fa-discord fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
+							  <a href="https://anilist.co/user/NereaCassian/" target="_blank"><img src="css/images/anilist.png" style="width: 45px"> </a>
+				            </article>
 							<p></p>
 							<a href="#work" class="button big scrolly">Mira lo que hago</a>
 						</div>
