--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 		<style>
 			.anilist{
 
-
-
+				width: 100%;
+				height: auto;
+				max-width: 45px;
 
 
 			}
@@ -57,14 +58,14 @@
 							<h3>She/her</h3>
 							<p>Y esta es mi <strong>Página personal</strong>. Soy una programadora junior que desde joven ha sentido pasíon por el mundo del software y hardware. También suelo hacer cositas en pixel art y jugar videojuegos.</p>
 							<p><strong>Redes Sociales</strong></p>
-							<article class="container">
+							<article>
 							  <a href="https://linkedin.com/in/nerea-kalandadze-22590b165" target="_blank"><span class="fab fa-linkedin fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
 							  <a href="https://twitter.com/who_caresboutme" target="_blank"><span class="fab fa-twitter fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
 							  <a href="https://www.instagram.com/nereacassian/" target="_blank"><span class="fab fa-instagram fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
 							  <a href="https://www.reddit.com/user/Deep_in_Abyss" target="_blank"><span class="fab fa-reddit fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
 							  <a href="https://t.me/deep_in_abyss" target="_blank"><span class="fab fa-telegram fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
 							  <a href="https://discord.com/invite/VdccbVyUjc" target="_blank"><span class="fab fa-discord fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
-							  <a href="https://anilist.co/user/NereaCassian/" target="_blank"><img src="css/images/anilist.png" style="width: 45px"> </a>
+							  <a class="anilist" href="https://anilist.co/user/NereaCassian/" target="_blank"><img class="anilist" src="css/images/anilist.png" style="width: 55px"> </a>
 				            </article>
 							<p></p>
 							<a href="#work" class="button big scrolly">Mira lo que hago</a>
