--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
 				width: 100%;
 				height: auto;
-				max-width: 45px;
+				min-width: 45px;
+				max-width: 53px;
 
 
 			}
@@ -65,7 +66,7 @@
 							  <a href="https://www.reddit.com/user/Deep_in_Abyss" target="_blank"><span class="fab fa-reddit fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
 							  <a href="https://t.me/deep_in_abyss" target="_blank"><span class="fab fa-telegram fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
 							  <a href="https://discord.com/invite/VdccbVyUjc" target="_blank"><span class="fab fa-discord fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
-							  <a class="anilist" href="https://anilist.co/user/NereaCassian/" target="_blank"><img class="anilist" src="css/images/anilist.png" style="width: 55px"> </a>
+							  <a class="anilist" href="https://anilist.co/user/NereaCassian/" target="_blank"><img class="anilist" src="css/images/anilist.png" style="width: 50px"> </a>
 				            </article>
 							<p></p>
 							<a href="#work" class="button big scrolly">Mira lo que hago</a>
