--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 								<section class="box style1">
 									<span class="fas fa-palette fa-5x"></span>
 									<p></p>
-									<h3><a href="https://imgur.com/gallery/qqVE27v" target="_blank">Mi ArtWork</a></h3>
+									<h3><a href="https://imgur.com/a/XixAjd5" target="_blank">Mi ArtWork</a></h3>
 									<p>Aquí tienes mi página de imgur con todos mis trabajos en pixel art.</p>
 									<p></p>
 								</section>
