--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<title>NereaK</title>
+		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -65,7 +68,7 @@
 							  <a href="https://www.instagram.com/nereacassian/" target="_blank"><span class="fab fa-instagram fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
 							  <a href="https://www.reddit.com/user/Deep_in_Abyss" target="_blank"><span class="fab fa-reddit fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
 							  <a href="https://t.me/deep_in_abyss" target="_blank"><span class="fab fa-telegram fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
-							  <a href="https://discord.gg/r8AGTXaHz5" target="_blank"><span class="fab fa-discord fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
+							  <a href="/discord" target="_blank"><span class="fab fa-discord fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
 							  <a class="anilist" href="https://anilist.co/user/NereaCassian/" target="_blank"><img class="anilist" src="css/images/anilist.png" style="width: 50px"> </a>
 				            </article>
 							<p></p>
