--- a/index.html
+++ b/index.html
@@ -116,7 +116,10 @@
 					</div>
 					<footer>
 						<p>¿Quieres ver más?</p>
+						<a href="/musicbotl" class="button big scrolly">Judy Alvarez</a>
 						<a href="portfolio.html" class="button big scrolly">Mi porfolio</a>
+						<a href="/twitch" class="button big scrolly">Twitch Bot</a>
+						<a href="/adblock" class="button big scrolly">Twitch Bot</a>
 					</footer>
 					<footer>
 						<ul id="copyright">
