links a otros proyectos

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 						<a href="/musicbot" target="_blank" class="button big scrolly">Judy Alvarez</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						<a href="portfolio.html" target="_blank" class="button big scrolly">Mi porfolio</a>&nbsp;&nbsp;&nbsp;&nbsp;
 						<a href="/twitch" target="_blank" class="button big scrolly">Twitch Bot</a>&nbsp;&nbsp;&nbsp;&nbsp;
-						<a href="/adblock" target="_blank" class="button big scrolly">Abblocker</a>&nbsp;&nbsp;&nbsp;&nbsp;
+						<a href="/adblock" target="_blank" class="button big scrolly">Adblocker</a>&nbsp;&nbsp;&nbsp;&nbsp;
 					</footer>
 					<footer>
 						<ul id="copyright">
