--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
 						<a href="/twitch" target="_blank" class="button big scrolly">Twitch Bot</a>&nbsp;&nbsp;&nbsp;&nbsp;
 						<a href="/adblock" target="_blank" class="button big scrolly">Adblocker</a>&nbsp;&nbsp;&nbsp;&nbsp;
 					</footer>
+          <footer>
+            <p>¿Quieres ver más?</p>
+            <a href="https://nereacassian.com/cloud" target="_blank"><span class="fab fa-cloud fa-1x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="https://nereacassian.com/adblock" target="_blank"><span class="fab fa-shield-halved fa-1x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
+          </footer>
 					<footer>
 						<ul id="copyright">
 							<a href="http://www.apache.org/licenses/LICENSE-2.0"<li>&copy;Licensed under the Apache License, Version 2.0</li></a><li>Designed with ❤️ by Nerea Kalandadze</li>
