--- a/index.html
+++ b/index.html
@@ -119,12 +119,13 @@
 						<a href="/musicbot" target="_blank" class="button big scrolly">Judy Alvarez</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						<a href="portfolio.html" target="_blank" class="button big scrolly">Mi porfolio</a>&nbsp;&nbsp;&nbsp;&nbsp;
 						<a href="/twitch" target="_blank" class="button big scrolly">Twitch Bot</a>&nbsp;&nbsp;&nbsp;&nbsp;
-						<a href="/adblock" target="_blank" class="button big scrolly">Adblocker</a>&nbsp;&nbsp;&nbsp;&nbsp;
 					</footer>
           <footer>
-            <p>¿Quieres ver más?</p>
-            <a href="https://nereacassian.com/cloud" target="_blank"><span class="fab fa-cloud fa-1x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="https://nereacassian.com/adblock" target="_blank"><span class="fab fa-shield-halved fa-1x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <p>Mis servicios sefhosted</p>
+            <a href="https://nereacassian.com/cloud" target="_blank" title="Cloud Storage">
+              <i class="fa-solid fa-cloud fa-3x"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="https://nereacassian.com/adblock" target="_blank" title="Adblock VPN">
+              <i class="fa-solid fa-shield-halved fa-3x"></i></a>
           </footer>
 					<footer>
 						<ul id="copyright">
