added another self hosted service

--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
             <a href="https://nereacassian.com/cloud" target="_blank" title="Cloud Storage">
               <i class="fa-solid fa-cloud fa-3x"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="https://nereacassian.com/adblock" target="_blank" title="Adblock VPN">
-              <i class="fa-solid fa-shield-halved fa-3x"></i></a>
+              <i class="fa-solid fa-shield-halved fa-3x"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="https://nereacassian.com/code" target="_blank" title="VScode-Server">
+			  <i class="fa-solid fa-laptop-code fa-3x"></i></a>			  
           </footer>
 					<footer>
 						<ul id="copyright">
