--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<li><a href="portfolio.html">Porfolio</a></li>
 				</ul>
 			</nav>
-
+		<!-- Nav -->	
 		<!-- Home -->
 			<div class="wrapper style1 first">
 				<article class="container" id="top">
@@ -76,6 +76,7 @@
 					</div>
 				</article>
 			</div>
+		<!-- Home -->	
 
 		<!-- Work -->
 			<div class="wrapper style2">
@@ -135,5 +136,6 @@
 					</footer>
 				</article>
 			</div>
+		<!-- Work -->	
 	</body>
 </html>
