--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<p>Y esta es mi <strong>Página personal</strong>. Soy una programadora junior que desde joven ha sentido pasíon por el mundo del software y hardware. También suelo hacer cositas en pixel art y jugar videojuegos.</p>
 							<p><strong>Redes Sociales</strong></p>
 							<article>
-							  <a href="mailto:contacto@nereacassian.com5" target="_blank"><span class="fa-solid fa-envelope fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
+							  <a href="mailto:contacto@nereacassian.com" target="_blank"><span class="fa-solid fa-envelope fa-3x" title="Click derecho para copiar el email :)"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
 							  <a href="https://linkedin.com/in/nerea-kalandadze-22590b165" target="_blank"><span class="fab fa-linkedin fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
 							  <a href="https://twitter.com/who_caresboutme" target="_blank"><span class="fab fa-twitter fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
 							  <a href="https://www.instagram.com/nereacassian/" target="_blank"><span class="fab fa-instagram fa-3x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
