added another service :) pls somebody stop me

--- a/index.html
+++ b/index.html
@@ -116,7 +116,10 @@
             <a href="https://nereacassian.com/adblock" target="_blank" title="Adblock VPN">
               <i class="fa-solid fa-shield-halved fa-3x"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
 			<a href="https://nereacassian.com/code" target="_blank" title="VScode-Server">
-			  <i class="fa-solid fa-laptop-code fa-3x"></i></a>			  
+			  <i class="fa-solid fa-laptop-code fa-3x"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;	
+			<a href="https://send.nereacassian.com" target="_blank" title="Drag & Drop">
+			  <i class="fa-solid fa-file-arrow-down fa-3x"></i></a>
+
           </footer>
 					<footer>
 						<ul id="copyright">
