Added a link to the whiteboard

--- a/index.html
+++ b/index.html
@@ -122,8 +122,9 @@
 			<a href="https://nereacassian.com/code" target="_blank" title="VScode-Server">
 			  <i class="fa-solid fa-laptop-code fa-3x"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;	
 			<a href="https://send.nereacassian.com" target="_blank" title="Drag & Drop">
-			  <i class="fa-solid fa-file-arrow-down fa-3x"></i></a>
-
+			  <i class="fa-solid fa-file-arrow-down fa-3x"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="https://wbo.nereacassian.com" target="_blank" title="Whiteboard">
+			   <i class="fa-solid fa-chalkboard fa-3x"></i></a>
           </footer>
 					<footer>
 						<ul id="copyright">
