Added a link to the webpage from my beloved friend rogama

--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
 						<ul id="copyright">
 							<a href="http://www.apache.org/licenses/LICENSE-2.0"<li>&copy;Licensed under the Apache License, Version 2.0</li></a><li>Designed with ❤️ by Nerea Kalandadze</li>
 						</ul>
+						<ul>
+							<a href="https://rogama25.es/"<li>Also visit Rogama25.es</li></a>
+						</ul>
 					</footer>
 				</article>
 			</div>
