--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 						<ul id="copyright">
 							<a href="http://www.apache.org/licenses/LICENSE-2.0"<li>&copy;Licensed under the Apache License, Version 2.0</li></a><li>Designed with ❤️ by Nerea Kalandadze</li>
 						</ul>
-						<ul>
+						<ul id="copyright">
 							<a href="https://rogama25.es/"<li>Also visit Rogama25.es</li></a>
 						</ul>
 					</footer>
