fixed a little bug

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<script src="js/jquery.scrolly.min.js"></script>
 		<script src="js/skel.min.js"></script>
 		<script src="js/init.js"></script>
-		<link rel="stylesheet" href="css/anilist.csss" />
+		<link rel="stylesheet" href="css/anilist.css" />
 
 
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
